# claude-code-on-aws-onboarding-guide

./: README.md  main.py  onboarding-guidance.md  pyproject.toml
notebooks/: sample.ipynb
src/claude-code-og/: template.settings.json
src/claude-code-og/commands/: client_app.py
src/claude_code_og/: cli.py
src/claude_code_og/commands/: admin_app.py
