[project]
name = "claude-code-on-aws-onboarding-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.3",
    "jinja2>=3.1.6",
    "rich>=14.2.0",
    "typer>=0.20.0",
]


[project.scripts]
claude-code-og = "claude_code_og.cli:app"


[tool.setuptools]
packages = ["claude_code_og"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"